--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,9 @@ buildscript {
     repositories {
         mavenLocal()
         maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/releases' }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.3.1")
@@ -23,6 +25,8 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir { dirs "$rootDir/../node_modules/@uiw/react-native-alipay/android/libs" }
+
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -32,8 +36,11 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+
         maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/releases' }
         maven { url 'https://www.jitpack.io' }
     }
 }
