--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-root-toast": "^3.4.1",
+    "react-native-webview": "11.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
