--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,7 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx8048M -Dkotlin.daemon.jvm.options\="-Xmx8048M" -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -46,3 +46,4 @@ org.gradle.java.home=C:/Program Files/Java/jdk-11
 # Enable simple gradle caching
 org.gradle.caching=true
 org.gradle.daemon=true
+org.gradle.configureondemand=true
