--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+        excludeAppGlideModule = true
     }
     repositories {
         mavenLocal()
@@ -42,5 +43,8 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
         maven { url 'https://www.jitpack.io' }
+    }
+    configurations.all {
+      resolutionStrategy { force 'com.facebook.react:react-native:0.71.4' }
     }
 }
