--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "clear": "react-native start --reset-cache",
+    "build:android": "cd android && ./gradlew assembleRelease && start app\\build\\outputs\\apk\\release",
     "test": "jest"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-root-toast": "^3.4.1",
-    "react-native-webview": "11.6.2"
+    "react-native-webview": "^11.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
