--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-root-toast": "^3.4.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-webview": "^11.26.1"
   },
   "devDependencies": {
